objects/LLC_BI__Debt__c.object
<CustomObject>
    <description>The debt object stores information about an applicant&apos;s debts.</description>
    <fields>
        <fullName>LLC_BI__Account_Number__c</fullName>
        <description>The system populates this optional field to associate the account number with the creditor.</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Type_Code__c</fullName>
        <description>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</description>
        <inlineHelpText>The system populates this optional text field with the account type code, which indicates the type of loan made by the creditor to the borrower.</inlineHelpText>
        <label>Account Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and represents the account to which this debt belongs.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Available_Amount__c</fullName>
        <description>This field is optional and represents the amount available to borrow on the debt.</description>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and is the contact who has this debt.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Count_30_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 30-59 days past due.</inlineHelpText>
        <label>Count 30 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Count_60_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 60-89 days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 60-89 days past due.</inlineHelpText>
        <label>Count 60 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Count_90_Days_Past_Due__c</fullName>
        <description>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</description>
        <inlineHelpText>The system populates this optional text field with the number of times the borrower&apos;s payment was 90 or more days past due.</inlineHelpText>
        <label>Count 90 Days Past Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Creditor_Industry_Code__c</fullName>
        <description>The system populates this optional text field with the creditor industry code.</description>
        <inlineHelpText>The system populates this optional text field with the creditor industry code.</inlineHelpText>
        <label>Creditor Industry Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Creditor_Number__c</fullName>
        <description>The system populates this optional text field with the credit subscriber&apos;s member code.</description>
        <inlineHelpText>The system populates this optional text field with the credit subscriber&apos;s member code.</inlineHelpText>
        <label>Creditor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Status_Code__c</fullName>
        <description>The system populates this optional text field with the current status code, which indicates the current status of the account.</description>
        <inlineHelpText>The system populates this optional text field with the current status code, which indicates the current status of the account.</inlineHelpText>
        <label>Current Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Of_Last_Payment__c</fullName>
        <description>The system populates this optional date field with the date the borrower made their most recent monthly payment.</description>
        <inlineHelpText>The system populates this optional date field with the date the borrower made their most recent monthly payment.</inlineHelpText>
        <label>Date Of Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Opened__c</fullName>
        <description>The system populates this optional date field with the date the account was opened.</description>
        <inlineHelpText>The system populates this optional date field with the date the account was opened.</inlineHelpText>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Type__c</fullName>
        <description>This field is required and denotes the type of debt.</description>
        <label>Debt Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly Auto/Lease Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Child Support Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Credit Card Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Student Loan Payments</fullName>
                </value>
                <value>
                    <fullName>Other Monthly Installment</fullName>
                </value>
                <value>
                    <fullName>Proposed Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if this debt is excluded from total debt calculations.</description>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excluded_Reason__c</fullName>
        <description>This field is optional and is a short description of the reason why the debt was excluded from total calculations.</description>
        <inlineHelpText>Enter a short description of the reason why the debt was excluded from total calculations.</inlineHelpText>
        <label>Excluded Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exposure_Type__c</fullName>
        <description>Users manually populate this optional text box. This field enables users to specify the exposure type when calculating exposure for a debt.</description>
        <label>Exposure Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__High_Credit_Amount__c</fullName>
        <description>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</description>
        <inlineHelpText>The system populates this optional currency field with the highest amount ever owed on the account or the original balance.</inlineHelpText>
        <label>High Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and represents the loan this debt is tied to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>This field is optional and represents the date on which the debt matures.</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Payment__c</fullName>
        <description>This field is required and represents the amount paid on the debt every month.</description>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Months_Left_To_Pay__c</fullName>
        <description>The system automatically populates this field with the number of months left to pay on the debt from information on the applicant&apos;s credit report.</description>
        <inlineHelpText>This field displays the number of months left to pay on the debt.</inlineHelpText>
        <label>Months Left to Pay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Months_Reviewed__c</fullName>
        <description>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</description>
        <inlineHelpText>The system populates this optional field with the number of months the borrower&apos;s payment history was reviewed.</inlineHelpText>
        <label>Months Reviewed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional, admin-facing field auto-populates when a debt is created from a selected pricing option. It is used primarily for auditing purposes.</description>
        <label>New Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is true if the debt is for an Offer or if it came from a Credit Report</description>
        <label>New Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Amount__c</fullName>
        <description>This field is optional and specifies the full original amount of the loan. (If the loan is pending approval, this is the intended amount for the loan.)</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Past_Due_Amount__c</fullName>
        <description>The system populates this optional currency field with the amount the borrower has past due on the account.</description>
        <inlineHelpText>The system populates this optional currency field with the amount the borrower has past due on the account.</inlineHelpText>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Pattern__c</fullName>
        <description>The system populates this optional text field with the borrower&apos;s payment pattern.</description>
        <inlineHelpText>The system populates this optional text field with the borrower&apos;s payment pattern.</inlineHelpText>
        <label>Payment Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payoff_With_Proceeds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually selects this field to indicate the loan proceeds are used to pay off the debt. By default, it is unchecked.</description>
        <inlineHelpText>Indicate if the loan proceeds are used to pay off the debt.</inlineHelpText>
        <label>Payoff with Proceeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Balance__c</fullName>
        <description>This field is optional and represents the amount of principal remaining on the debt.</description>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional field automatically populates via the system once a new debt is created from a product package. This field associates which product package the debt belongs to.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reported_Date__c</fullName>
        <description>The system populates this optional field to indicate the date the creditor last reported the debt to the credit bureau.</description>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Terms_Duration__c</fullName>
        <description>The system populates this optional text field with the term duration of the financial obligation.</description>
        <inlineHelpText>The system populates this optional text field with the term duration of the financial obligation.</inlineHelpText>
        <label>Terms Duration</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Debt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Contact__c</columns>
        <columns>LLC_BI__Loan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>